# cinnamon-theme-editor

./: .cde-design.excalidraw  .todo.md  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/styling/: color-picker.scss  colors.scss  editor.scss  main.css  main.scss  overlay.scss  statusbar.scss  style_input.scss  titlebar.scss  toolbar.scss
assets/styling/inspector/: panel.scss
data/: resources.gresource  resources.gresource.xml
data/resources/: style.css
scripts/: build.sh  run.sh  test.sh
src/: config.rs  helper.rs  main.rs
src/app/: action_setup.rs  actions.rs  application.rs  dconf.rs  mod.rs  window.rs
src/app/actions/: create_new.rs  mod.rs  switch_inspector.rs
src/app/components/: mod.rs
src/app/components/contents/: main_contents.rs  mod.rs  sidebar.rs  statusbar.rs  toolbar.rs
src/app/components/decorations/: mod.rs  titlebar.rs  window_controls.rs
src/app/inspector/: inspector_page.rs  inspector_settings.rs  mod.rs  panel.rs
src/app/inspector/base_classes/: inspector_cinnamongenericcontainer.rs  inspector_gobject.rs  inspector_stbin.rs  inspector_stboxlayout.rs  inspector_stbutton.rs  inspector_stentry.rs  inspector_sticon.rs  inspector_stlabel.rs  mod.rs
src/app/io/: mod.rs  parse.rs  read.rs  test.rs  write.rs
src/app/io/parser/: basic_selector.rs  declaration.rs  declaration_block.rs  mod.rs  property.rs  property_value.rs  selector.rs
src/app/ui/: footerbar.rs  mod.rs
src/app/ui/button/: apply_button.rs  mod.rs  new_theme_button.rs
src/app/ui/dialog/: mod.rs  text_entry_dialog.rs
(+27 files in other folders)
