[package]
name = "cinnamon-theme-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
once_cell = "1.21.3"
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-desktop = "0.7.3"
tokio = { version = "1.49.0", features = ["time"] }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
